

SUBDIRS = 				daqstart \
					dvdburn \
					sequencer \
                                        Buffer \
                                        format \
                                        IO \
					FormattedIO \
					filter \
					conversion \
					ringselector \
					eventlog \
					bufdump	\
					sclclient \
					tkbufdump \
					compatibility \
					newscaler	\
					varmanager	\
					varmanager/server	\
					varmanager/scripts \
					statemanager		\
					runcontrol		\
					bootmanager	\
					services	\
					vardbEventbuilder   \
					dumpend		\
					expEditor	\
					fileanalyzer	


# scalerdisplay - removed in favor of newscaler

